@@ -1,6 +1,7 @@
 Changes from 0.4.1 to 0.4.2
 - notify no longer has internal testing, controlled by dbus build instead
 - case sensitivity in text search
+- basic notify fifo support
 
 Changes from 0.4.0 to 0.4.1
 - simplified headers
